<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" description="Application name. [CHAR_LIMIT=30]">
            Mesure VVS</string>

    <!-- Strings present in 'VR' activity -->
    <string name="title_activity_vr" description="VR activity title. [CHAR_LIMIT=30]">
            Hello Cardboard</string>
    <string name="read_storage_permission" description="Text shown on Android Toast when permissions are not granted.
                         [CHAR_LIMIT=90]">
            Hello Cardboard requires to read your external storage to load device parameters.</string>
    <string name="low_storage_error" description="Text shown on Android Toast when detector dependencies can not be
                         downloaded due to low storage. [CHAR_LIMIT=70]">
            Detector dependencies cannot be downloaded due to low device storage</string>

    <!-- Strings present in 'Settings' menu -->
    <string name="switch_viewer" description="Short text shown on the settings menu to let the user switch viewer.
                         [CHAR_LIMIT=30]">
            Switch Cardboard viewer</string>

    <string name="title_activity_manette">Manette</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="button_connect">Connect to device</string>
    <string name="button_scan">Scan for devices</string>
    <string name="btn_manette">Remote</string>
    <string name="btn_ecran">Screen</string>
    <string name="bluetooth_reset">Bluetooth Reset</string>
    <string name="display_result">Result=</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_result">result</string>
    <string name="btn_adjust_left">Adjust Left</string>
    <string name="btn_continuous_left">Continuous Left</string>
    <string name="btn_adjust_right">Adjust Right</string>
    <string name="btn_continuous_right">Continuous Right</string>
    <string name="permission_bluetooth_rationale">Le bluetooth est nécessaire pour connecter la manette au casque VR</string>
</resources>
