<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:paddingLeft="16.0dip"
    android:paddingTop="16.0dip"
    android:paddingRight="16.0dip"
    android:paddingBottom="16.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/gauche"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_adjust_left"/>
    <Button
        android:id="@+id/gauche_lent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginEnd="16dp"
        android:text="Adjust Left (slowly)"/>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="101.0dip"
            android:text="@string/btn_result"/>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/droite_lent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginStart="16dp"
        android:text="Adjust Right (slowly)" />
    <Button
        android:id="@+id/droite"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_marginStart="16dp"
        android:text="@string/btn_adjust_right" />
</LinearLayout>
