<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="16.0dip"
    android:paddingTop="16.0dip"
    android:paddingRight="16.0dip"
    android:paddingBottom="16.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/placeholderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Patient selection"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeholderText"
        android:orientation="horizontal"
        android:id="@+id/selectLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="No patient selected"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/patientId"
            />

        <Button
            android:id="@+id/placeholderButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/placeholderText"
            android:layout_weight="1"
            android:text="select patient" />

    </LinearLayout>

    <Button
        android:id="@+id/manette"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRole"
        android:text="@string/btn_manette" />

    <Button
        android:id="@+id/ecran"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/manette"
        android:text="@string/btn_ecran" />
    <Button
        android:id="@+id/bluetooth_reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ecran"
        android:text="@string/bluetooth_reset" />

    <TextView
        android:id="@+id/tvParametres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectLayout"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Paramètres de la mesure"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/protocole"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Role of the smartphone"
        android:textSize="20sp" />
<!--
    <LinearLayout
        android:id="@+id/llVvsMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sbNbMesures"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSimple"
            style="@android:style/Widget.DeviceDefault.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="VVS Simple"
            android:textOn="VVS Simple" />

        <ToggleButton
            android:id="@+id/tbDynamique"
            style="@android:style/Widget.DeviceDefault.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="VVS Dynamique"
            android:textOn="VVS Dynamique" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sbNbMesures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llNbMesures"
        android:max="10"
        android:progress="5" />

    <LinearLayout
        android:id="@+id/llNbMesures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvParametres"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitlesb"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:text="Nombre de mesures" />

        <TextView
            android:id="@+id/tvNbMesures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:gravity="end"
            android:text="0" />

    </LinearLayout>
-->

    <TextView
        android:id="@+id/tvfichepatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetooth_reset"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Patient files"
        android:textSize="20sp" />
    <!--android:layout_below="@id/ecran"-->

    <Button
        android:id="@+id/openusrdata"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvfichepatient"
        android:text="open" />

    <Button
        android:id="@+id/button_export"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/openusrdata"
        android:text="CSV export" />

    <Button
        android:id="@+id/protocole"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectLayout"
        android:text="Protocole" />

    <!--    <Button
            android:id="@+id/tutoriel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/openusrdata"
            android:text="Manuel D'utilisation" /> -->

</RelativeLayout>
